Fixed overflow issue by moving property to page divs

--- a/css/edmss.css
+++ b/css/edmss.css
@@ -49,7 +49,7 @@ i:hover {
     padding: 0 3em;
 
     overflow-x: hidden;
-    overflow-y: auto;
+    /*overflow-y: auto;*/
     background-color: #f9f9f9;
 }
 
@@ -74,6 +74,7 @@ a.item.current, a.item:hover {
     height: 100%;
     width: 100%;
     padding: 0 1em;
+    overflow: auto;
 
     -webkit-transition: left 0.6s ease;
     -moz-transition: left 0.6s ease;
